scrollbar fixes

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,28 @@
 @tailwind components;
 @tailwind utilities;
 
+/* Firefox */
+* {
+  scrollbar-width: thin;
+  scrollbar-color: #444654 #343541;
+}
+
+/* Chrome, Edge, and Safari */
+*::-webkit-scrollbar {
+  width: 15px;
+}
+
+*::-webkit-scrollbar-track {
+  background: #343541;
+  border-radius: 5px;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: #444654;
+  border-radius: 14px;
+  border: 3px solid #343541;
+}
+
 html,
 body {
   padding: 0;
